2015-01-29 belangeo <belangeo@gmail.com>

    * Release tag: 0.7.4
    - rev 1284

2015-01-29 belangeo <belangeo@gmail.com>

    * Added new function: floatmap, 0-1 range mapper. Fixed bug in DataTable initialization 
    and added an automatic refresh of the DataTable grapher window.
    - rev 1282

2015-01-26 belangeo <belangeo@gmail.com>

    * Added new objet: Particle, a full control granular synthesis generator.
    - rev 1281

2015-01-24 belangeo <belangeo@gmail.com>

    * Added setSync method to Granule object. Allow to toggle between synchronous 
    and asynchronous granulation. Added noteon and noteoff trigger streams to Notein 
    object.

    - rev 1280

2014-12-15 belangeo <belangeo@gmail.com>

    * Added reset method to CtlScan and CtlScan2 objects.
    - rev 1279

2014-12-03 belangeo <belangeo@gmail.com>

    * Added new objet: PeakAmp, a peak amplitude follower.
    - rev 1277

2014-11-27 belangeo <belangeo@gmail.com>

    * Added reset method to Beat and Euclide objects.
    - rev 1275

-------------------------------------------------------------------------------------

2014-10-17 belangeo <belangeo@gmail.com>

    * Release tag: 0.7.3.
    - rev 1273

2014-11-15 belangeo <belangeo@gmail.com>

    * Added new objet: Scope, an audio waveform display.
    - rev 1270

2014-11-12 belangeo <belangeo@gmail.com>

    * E-Pyo: Fix marker's line numbering.
    - rev 1267

2014-11-08 belangeo <belangeo@gmail.com>

    * E-Pyo: Added Save As Template... menu item.
    - rev 1263

2014-11-02 belangeo <belangeo@gmail.com>

    * Fixed bug in Fader decreasing ramp.
    - rev 1262

2014-10-28 belangeo <belangeo@gmail.com>

    * Added midi output methods to the Server object. noteout, afterout, ctlout, programout, pressout and bendout.
    - rev 1261

2014-10-28 belangeo <belangeo@gmail.com>

    * Server.setMidiOutputDevice(idx) with `idx` greater than the higher portmidi devices index opens all available output devices.
    - rev 1260
